Made some minor changes

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Babo &amp; Keagile | A Cinematic Opening</title>
+    <title>Babo &amp; Keagile | A Wondrous Union</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&amp;display=swap"
@@ -51,7 +51,7 @@
 
     <style>
         .pinyon-script-regular {
-  font-family: "Pinyon Script", cursive;
+  font-family: "Newsreader", serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -230,7 +230,7 @@
       }
       .prelude-title {
         margin: 0;
-        font-family: "Pinyon Script", cursive;
+        font-family: "Newsreader", serif;
         font-size: clamp(3.2rem, 8vw, 7.2rem);
         line-height: 0.95;
         font-weight: 400;
@@ -471,7 +471,7 @@
               >Chapter One</span
             >
             <h1
-              class="font-serif text-5xl md:text-7xl lg:text-8xl text-black leading-[1.1] italic"
+              class="font-newsreader text-5xl md:text-7xl lg:text-8xl text-black leading-[1.1] "
             >
               A Story Written in Grace
             </h1>
@@ -769,11 +769,8 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
         </div>
         <!-- Event Details -->
         <div class="mb-12">
-          <h2 class="text-2xl font-dark tracking-wide text-dark /90">
-            Monday, 7th September 2026
-          </h2>
           <p class="mt-2 text-sm text-dark/50 letter-spacing-widest uppercase">
-            De Harte Wedding Venue • Pretoria, South Africa
+            Monday • 7th September • 2026
           </p>
         </div>
         <!-- Action Buttons -->
