--- a/venue.html
+++ b/venue.html
@@ -310,12 +310,14 @@
                 Kievits Kroon Gauteng Wine Estate, Pretoria
               </h3>
               <p class="type-body text-slate-700 leading-relaxed mb-6">
-                Situated in the Pretoria CBD, the 4-star ANEW Hotel Capital is
-                the perfect base from which to explore one of SA’s capital
-                cities. This hotel in Pretoria is perfect for business
-                travellers and conference delegates, enjoy the sight of the
-                famous Jacaranda in spring, and discover South African treasures
-                like Loftus Versfeld and the Voortrekker Monument.
+                Escape to Kievits Kroon, a beautiful, tranquil wine estate,
+                known for its luxury accommodation, superb facilities,
+                immaculate gardens, gourmet dining and wellness spa. Only 10
+                minutes from central Pretoria and 45 minutes from Sandton,
+                Gauteng, set along a Jacaranda-lined lane on a 16-hectare
+                estate, Kievits Kroon is a sought-after destination for those
+                wanting to escape city life, or for corporates seeking a unique
+                business experience.
               </p>
               <div class="space-y-3 mb-8">
                 <div class="flex items-start gap-3">
@@ -323,8 +325,8 @@
                     >map</span
                   >
                   <p class="type-meta text-slate-600 text-sm">
-                    390 van der Walt Street/ 390 Lilian Ngoyi Street, Pretoria
-                    Central, 0002 Pretoria, South Africa
+                    Plot 41, Reier Road, Kameeldrift, 0035 Pretoria, South
+                    Africa
                   </p>
                 </div>
               </div>
@@ -412,10 +414,9 @@
                   Local Transport
                 </h5>
                 <p class="type-body text-slate-600 text-sm">
-                  While a shuttle has been arranged to and from the venue, we
-                  cannot accomodate for everyone. Guests are
-                  encouraged to use their personal vehicles to attend the
-                  ceremony for ease of commuting to your preferred accommodation
+                  Guests are encouraged to use their personal vehicles to attend
+                  the ceremony for ease of commuting to your preferred
+                  accommodation.
                 </p>
               </div>
             </div>
@@ -462,10 +463,8 @@
             <p
               class="type-body text-slate-400 text-sm max-w-lg mx-auto font-light"
             >
-              Our dedicated wedding oversears Bose Njabulo(Maid of
-              Honour/Brides's sister) & Lekgotla Lesolle (Best man/Grooms's
-              brother) are available to handle bookings, transfers, and any
-              special requests for your journey.
+              Our dedicated wedding overseers are available to handle any and
+              all questions, concerns, or special requests for your journey.
             </p>
             <button
               id="open-overseers-modal"
