removed higlight effect on response radio buttons text in the rsvp form , increased accent color for radio buttons

--- a/rsvp.html
+++ b/rsvp.html
@@ -168,7 +168,7 @@
                 <label class="flex items-center gap-4 cursor-pointer group">
                   <div class="relative flex items-center justify-center">
                     <input
-                      class="peer h-6 w-6 border-2 border-primary/30 text-primary focus:ring-primary/20 cursor-pointer rounded-full appearance-none checked:bg-primary checked:border-primary"
+                      class="peer h-6 w-6 border-2 border-primary text-primary focus:ring-primary/20 cursor-pointer rounded-full appearance-none checked:bg-primary checked:border-primary"
                       name="attendance"
                       type="radio"
                     />
@@ -178,14 +178,14 @@
                     >
                   </div>
                   <span
-                    class="text-lg font-display group-hover:text-primary transition-colors italic"
+                    class="text-lg font-display  transition-colors italic"
                     >Delighted to attend</span
                   >
                 </label>
                 <label class="flex items-center gap-4 cursor-pointer group">
                   <div class="relative flex items-center justify-center">
                     <input
-                      class="peer h-6 w-6 border-2 border-primary/30 text-primary focus:ring-primary/20 cursor-pointer rounded-full appearance-none checked:bg-primary checked:border-primary"
+                      class="peer h-6 w-6 border-2 border-primary text-primary focus:ring-primary/20 cursor-pointer rounded-full appearance-none checked:bg-primary checked:border-primary"
                       name="attendance"
                       type="radio"
                     />
@@ -195,7 +195,7 @@
                     >
                   </div>
                   <span
-                    class="text-lg font-display group-hover:text-primary transition-colors italic"
+                    class="text-lg font-display  transition-colors italic"
                     >Regretfully decline</span
                   >
                 </label>
