great vibes font added to keagile and babo headers

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
@@ -55,6 +55,12 @@
   font-weight: 400;
   font-style: normal;
 }
+.great-vibes-regular {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
       body {
         font-family: "Newsreader", serif;
@@ -307,7 +313,7 @@
           <div class="prelude-preview"></div>
           <div class="prelude-front">
             <div class="prelude-front-face">
-              <h1 class="prelude-title">Keagile &amp; Babo</h1>
+              <h1 class="text-9xl great-vibes-regular mb-4">Keagile &amp; Babo</h1>
               <p class="prelude-subtitle">A Celebration of Love</p>
             </div>
             <div class="prelude-front-back" aria-hidden="true"></div>
@@ -381,7 +387,7 @@
             </p>
           </div>
           <!-- Main Names -->
-          <div class="space-y-8 pinyon-script-regular leading-[1.1] italic">
+          <div class="space-y-8 great-vibes-regular  leading-[1.1] italic">
             <h1
               class="text-6xl md:text-8xl lg:text-9xl font-extralight tracking-tight text-deep-black italic leading-[0.9]"
             >
