--- a/rsvp.html
+++ b/rsvp.html
@@ -25,6 +25,9 @@
       href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
