converted graduation image to png

--- a/home.html
+++ b/home.html
@@ -440,14 +440,6 @@
         </div>
       </footer>
     </div>
-    <!-- Map Placeholder Component -->
-    <div class="hidden">
-      <img
-        alt="Wedding location map"
-        data-location="Cape Town"
-        src="https://lh3.googleusercontent.com/aida-public/AB6AXuC6jNx3E1xY5EzdjcUv7xgb3jFQW-zBhBe3_iBEqQGVaUK3ryd8kchSi9Xy3pkp1JawyUEoC0c-nDt1vFo2UNoQAJqtxYx3J_w5D0joIe0R3vM1vP2c1pTjdCAvbqHLG0Mvwzex9GOPDAp8lr4VWphmOKS6jceT4RmQ-O3axwCRL56faJrHRREXJDS8vkdTBvyP-7gYIup0I-XRF09vVZrLE14cm9NGc2Z8eMH-ppL6ZemC-_pFKN-6sCxDFdZj3_s-GAS0Pm_JROMu"
-      />
-    </div>
     <!-- Split Screen Editorial Layout -->
     <section class="flex flex-col md:flex-row min-h-screen w-full">
       <!-- Left: High-Fashion Portrait Column -->
@@ -458,7 +450,7 @@
           class="w-full h-full bg-center bg-no-repeat bg-cover transform scale-105"
           data-alt="Editorial high-fashion wedding portrait of couple in elegant attire"
           style="
-            background-image: url('assets/graduation.jpg');
+            background-image: url(assets/graduation.png);
           "
         >
           <!-- Overlay for cinematic depth -->
