implemented lazy loading

--- a/venue.html
+++ b/venue.html
@@ -161,6 +161,7 @@
           alt="Elegant wedding venue architecture"
           class="w-full h-full object-cover grayscale-[20%]"
           data-alt="Luxurious golden-hour view of a grand cathedral and ballroom entrance"
+          loading="lazy"
           src="Assets/destination22.jpg"
         />
         <div class="absolute inset-0 z-20 flex items-center justify-center">
@@ -183,6 +184,7 @@
                 alt="De Harte Wedding Venue"
                 class="w-full h-full object-cover"
                 data-alt="Luxurious wedding venue with white architecture and lush gardens"
+                loading="lazy"
                 src="https://lh3.googleusercontent.com/aida-public/AB6AXuCvm9wXBdK6AV0utzc8AMAo1JlNyNIa-NnQjgSQkwSSWtZKbFzLU82bWQGsWEljVnu0wrX40kVad0a3DlN58TZO1iNI0vY9hx83FCqZxJmLakVsCPZuCTPMPsSfp0xpTUZ39y99F3fzV__zsN8XbIJnFpuSFA29r_aHNpMry_uroWRgfnLPOIqDBZb22iXFXImZjU58wtpTnP51APQs8xN1uVjzDGPOOHLazsWoA56a1lGWboBSIH7eWm-Mr7s4t4gCFPLA3ZT53hBb"
               />
               <div
@@ -453,6 +455,7 @@
               alt="Elegant background"
               class="w-full h-full object-cover"
               data-alt="Soft out of focus luxury silk pattern"
+              loading="lazy"
               src="https://lh3.googleusercontent.com/aida-public/AB6AXuCtZHo1yISFfTqSTMksSPLNSPtRqI1ATKegAPvKV8TRCYkpDJ0VgC_bd7pWyNUX5fAgl2ImvDfKrRFucCyR1MfqyhdPtQqAK1o-kw7pRQePLmGy7MgCyFTkR2S8UZEjstcy5Sarq95nt7dpDCQFQA4LNGB-KXVt_tfd_pVyzCiIpysFovW5Nxk_U0BGBtbfvESZ01U2afuHrboQqn04XgoUsbB8mQmheluGxGRU12SKbcQQnCjJ5rttzLASyKWQgyQxtgBa6uBALQxo"
             />
           </div>
