--- a/home.html
+++ b/home.html
@@ -337,6 +337,7 @@
           alt="Soft focus romantic wedding background"
           class="w-full h-full object-cover opacity-60 scale-105"
           data-alt="Soft focus romantic image of a luxury wedding venue"
+          loading="lazy"
           src="https://lh3.googleusercontent.com/aida-public/AB6AXuB7isy7XKERbeLn9WqgRtfiOESRKuoHvuYvaUo1l8k8aGYrLvk4F3ix3QuB1dMH70Dk5X2PqgJeNT4INwzY0IiTFAqdtV_XCrGlU63_RS9kGMv2_JIKmgYgSmrHqXqbzwv7_8F4wFk8S5g64kB9kqNm9d8MF950d09yXPjcfOHAFxI-YHYJAFA-JBfs9yq4mGzmeivyTSvrKP-INv9HaAVTkLqJDQ7Gvv5OD9G4jk4xvHcCLKJaWM-1Lv4nXbb34tidWjmuv3dwUDGX"
         />
       </div>
@@ -510,6 +511,7 @@
           <img
             class="w-full h-full object-cover transition-all duration-700"
             data-alt="Black and white close up of wedding rings and silk fabric"
+            loading="lazy"
 src="Assets/IMG_6433.jpg"          />
           
         </div>
@@ -555,6 +557,7 @@ src="Assets/IMG_6433.jpg"          />
           <img
             class="w-full h-full object-cover transition-all duration-700"
             data-alt="Elegant bride in a silk gown"
+            loading="lazy"
             src="Assets/IMG_0971.JPG"
           />
         </div>
@@ -618,6 +621,7 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
             >
               <img
                 class="w-full h-44 md:h-60 object-cover object-left"
+                loading="lazy"
                 src="Assets/proposal1.JPG"
                 alt="Polaroid proposal one"
               />
@@ -627,6 +631,7 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
             >
               <img
                 class="w-full h-44 md:h-[14.5rem] object-cover object-center"
+                loading="lazy"
                 src="Assets/proposal7.JPG"
                 alt="Polaroid proposal two"
               />
@@ -636,6 +641,7 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
             >
               <img
                 class="w-full h-40 md:h-[13.5rem] object-cover object-center"
+                loading="lazy"
                 src="Assets/proposal5.JPG"
                 alt="Polaroid proposal top"
               />
@@ -645,6 +651,7 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
             >
               <img
                 class="w-full h-48 md:h-[16.5rem] object-cover object-right"
+                loading="lazy"
                 src="Assets/proposal2.JPG"
                 alt="Polaroid proposal three"
               />
@@ -654,6 +661,7 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
             >
               <img
                 class="w-full h-36 md:h-48 object-cover object-center"
+                loading="lazy"
                 src="Assets/proposal6.JPG"
                 alt="Polaroid proposal four"
               />
