Home page image fix

--- a/home.html
+++ b/home.html
@@ -451,7 +451,7 @@
           class="w-full h-full bg-center bg-no-repeat bg-cover transform scale-105"
           data-alt="Editorial high-fashion wedding portrait of couple in elegant attire"
           style="
-            background-image: url(assets/graduation.png);
+            background-image: url(Assets/graduation.png);
           "
         >
           <!-- Overlay for cinematic depth -->
