minor changes to font for consistency

--- a/home.html
+++ b/home.html
@@ -470,7 +470,7 @@
               >Chapter One</span
             >
             <h1
-              class="font-newsreader text-5xl md:text-7xl lg:text-8xl text-black leading-[1.1] "
+              class="font-extralight italic text-5xl md:text-7xl lg:text-8xl text-black leading-[1.1] "
             >
               A Story Written in Grace
             </h1>
@@ -516,7 +516,7 @@ src="Assets/IMG_6433.jpg"          />
           
         </div>
         <div
-          class="tracking-[0.4em] rounded-lg group relative mt-6 md:mt-0"
+          class=" rounded-lg group relative mt-6 md:mt-0"
         >
           <div
             class="w-full h-full p-4 md:p-10 lg:p-4"
@@ -526,7 +526,7 @@ src="Assets/IMG_6433.jpg"          />
               >Chapter Two</span
             >
             <h3
-              class="font-serif text-5xl md:text-7xl lg:text-8xl mb-4 mt-4 text-black leading-[1.1] italic"
+              class="font-extralight text-5xl md:text-7xl lg:text-8xl mb-4 mt-4 text-black leading-[1.1] italic"
             >
               The Story Evolves
             </h3>
@@ -577,7 +577,7 @@ src="Assets/IMG_6433.jpg"          />
               >Chapter Three</span
             >
             <h1
-              class="font-serif text-5xl md:text-7xl lg:text-8xl text-black leading-[1.1] italic"
+              class="font-extralight text-5xl md:text-7xl lg:text-8xl text-black leading-[1.1] italic"
             >
               The Beginning of Forever
             </h1>
