--- a/venue.html
+++ b/venue.html
@@ -51,11 +51,6 @@
       };
     </script>
     <style>
-      body {
-        font-family: "Newsreader", serif;
-        background-color: #f5f5f3;
-        color: #1a1814;
-      }
       .type-kicker {
         font-size: 0.7rem;
         font-weight: 700;
@@ -63,23 +58,15 @@
         text-transform: uppercase;
       }
       .type-section-title {
-        font-family: "Newsreader", serif;
-        font-weight: 600;
         letter-spacing: -0.01em;
       }
       .type-card-title {
-        font-family: "Newsreader", serif;
-        font-weight: 700;
         letter-spacing: -0.01em;
       }
       .type-body {
-        font-family: "Newsreader", serif;
-        font-weight: 400;
         line-height: 1.7;
       }
       .type-meta {
-        font-family: "Newsreader", serif;
-        font-weight: 500;
         letter-spacing: 0.01em;
       }
       .type-button {
@@ -185,7 +172,7 @@
                 class="w-full h-full object-cover"
                 data-alt="Luxurious wedding venue with white architecture and lush gardens"
                 loading="lazy"
-                src="https://lh3.googleusercontent.com/aida-public/AB6AXuCvm9wXBdK6AV0utzc8AMAo1JlNyNIa-NnQjgSQkwSSWtZKbFzLU82bWQGsWEljVnu0wrX40kVad0a3DlN58TZO1iNI0vY9hx83FCqZxJmLakVsCPZuCTPMPsSfp0xpTUZ39y99F3fzV__zsN8XbIJnFpuSFA29r_aHNpMry_uroWRgfnLPOIqDBZb22iXFXImZjU58wtpTnP51APQs8xN1uVjzDGPOOHLazsWoA56a1lGWboBSIH7eWm-Mr7s4t4gCFPLA3ZT53hBb"
+                src="Assets/deharte.jpeg"
               />
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent lg:hidden"
@@ -207,38 +194,42 @@
                 retreat designed for profound celebration."
               </p>
               <div class="space-y-4 mb-10">
-                <div class="flex items-start gap-4">
+                <div class="flex items-center gap-4">
                   <span class="material-symbols-outlined text-primary text-xl"
                     >location_on</span
                   >
                   <p
                     class="type-meta text-xs tracking-wide text-slate-600 dark:text-slate-300"
                   >
-                    Plot 123, Kameeldrift East, Pretoria, South Africa
+                    206 Rentia St, Onderstepoort, Pretoria, 0110, South Africa
                   </p>
                 </div>
-                <div class="flex items-start gap-4">
+                <div class="flex items-center gap-4 align-items-center">
                   <span class="material-symbols-outlined text-primary text-xl"
                     >event_available</span
                   >
                   <p
                     class="type-meta text-xs tracking-wide text-slate-600 dark:text-slate-300"
                   >
-                    Saturday, 24th October 2024
+                    Monday, 7th September 2026
                   </p>
                 </div>
               </div>
               <div class="flex flex-wrap gap-4">
-                <button
+                <a
+                  href="https://www.google.com/maps/place/De+Harte+Venue/@-25.6087818,28.1795673,835m/data=!3m2!1e3!4b1!4m6!3m5!1s0x1ebfdba1de6ac151:0x7135d36d69fb7d18!8m2!3d-25.6087818!4d28.1821422!16s%2Fg%2F11dx93tsbr?entry=ttu&g_ep=EgoyMDI2MDIyMi4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
                   class="type-button bg-slate-900 dark:bg-primary text-white dark:text-background-dark px-8 py-3 rounded-full"
                 >
                   Get Directions
-                </button>
-                <button
+                </a>
+                <a
+                  href="https://deharte.co.za/"
+                  target="_blank"
                   class="type-button border border-slate-200 dark:border-slate-700 px-8 py-3 rounded-full hover:bg-slate-50 transition-colors"
                 >
                   Explore Venue
-                </button>
+                </a>
               </div>
             </div>
           </div>
@@ -255,13 +246,13 @@
               >hotel</span
             >
             <h2
-              class="type-section-title text-3xl font-bold text-bronze uppercase tracking-tight"
+              class="type-section-title font-light text-3xl text-bronze uppercase tracking-tight"
             >
               Stay With Us
             </h2>
           </div>
           <div
-            class="group relative bg-white dark:bg-slate-900 rounded-xl overflow-hidden editorial-shadow hover-border-taupe transition-all duration-500 mb-5 flex flex-col lg:flex-row"
+            class="group relative bg-white dark:bg-slate-900 rounded-xl overflow-hidden editorial-shadow hover-border-taupe transition-all duration-500 mb-20 flex flex-col lg:flex-row"
           >
             <div
               class="lg:w-1/2 h-80 lg:h-auto bg-cover bg-center"
@@ -281,7 +272,7 @@
                 like Loftus Versfeld and the Voortrekker Monument.
               </p>
               <div class="space-y-3 mb-8">
-                <div class="flex items-start gap-3">
+                <div class="flex items-center gap-3">
                   <span class="material-symbols-outlined text-primary"
                     >map</span
                   >
@@ -322,7 +313,7 @@
                 business experience.
               </p>
               <div class="space-y-3 mb-8">
-                <div class="flex items-start gap-3">
+                <div class="flex items-center gap-3">
                   <span class="material-symbols-outlined text-primary"
                     >map</span
                   >
@@ -359,7 +350,7 @@
               >info</span
             >
             <h2
-              class="type-section-title text-3xl font-bold text-bronze uppercase tracking-tight"
+              class="type-section-title text-3xl font-light text-bronze uppercase tracking-tight"
             >
               Travel Notes
             </h2>
