--- a/home.html
+++ b/home.html
@@ -388,9 +388,9 @@
             </p>
           </div>
           <!-- Main Names -->
-          <div class="space-y-8 great-vibes-regular  leading-[1.1] italic">
+          <div class="space-y-8 great-vibes-regular leading-[1.1] italic">
             <h1
-              class="text-6xl md:text-8xl lg:text-9xl font-extralight tracking-tight text-deep-black italic leading-[0.9]"
+              class="text-6xl my-6 md:text-8xl lg:text-9xl font-extralight tracking-tight text-deep-black italic leading-[0.9]"
             >
               Keagile
               <span
