--- a/attire.html
+++ b/attire.html
@@ -51,11 +51,6 @@
       };
     </script>
     <style>
-      .gold-gradient-border {
-        border: 1px solid;
-        border-image-source: linear-gradient(45deg, #eebd2b, #fef3c7, #eebd2b);
-        border-image-slice: 1;
-      }
       .letter-spacing-widest {
         letter-spacing: 0.2em;
       }
@@ -100,9 +95,9 @@
       <span class="material-symbols-outlined cursor-pointer">menu</span>
     </div>
   </header>
-      <main class="flex-grow pt-32 pb-24">
+      <main class="flex-grow pt-20 pb-24">
         <!-- Hero Section -->
-        <section class="max-w-5xl mx-auto px-6 text-center mb-24">
+        <section class="max-w-5xl mx-auto px-4 text-center mb-24">
           <p
             class="text-primary font-bold uppercase tracking-[0.3em] text-xs mb-4"
           >
@@ -115,7 +110,7 @@
           </h2>
           <div class="w-24 h-px bg-primary/30 mx-auto mb-8"></div>
           <p
-            class="max-w-2xl mx-auto text-lg md:text-xl text-slate-600 dark:text-slate-400 font-light leading-relaxed"
+            class="max-w-2xl mx-auto text-lg md:text-lg text-slate-600 dark:text-slate-400 font-light leading-relaxed"
           >
             A celebration of lush tones and elegant textures. We invite our
             guests to embrace the vibrant energy of the season through our
